--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sketchpacks Design Pattern Field Guide",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/adamkirkwood/sketchpacks-fieldguide/issues"
   },
-  "homepage": "https://github.com/adamkirkwood/sketchpacks-fieldguide#readme"
+  "homepage": "https://github.com/adamkirkwood/sketchpacks-fieldguide#readme",
+  "dependencies": {
+    "@storybook/cli": "^3.0.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "devDependencies": {
+    "@storybook/react": "^3.0.1"
+  }
 }
