--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sketchpacks-fieldguide",
   "version": "1.0.0",
   "description": "Sketchpacks Design Pattern Field Guide",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
@@ -31,5 +31,8 @@
   },
   "devDependencies": {
     "@storybook/react": "^3.0.1"
+  },
+  "devDependencies": {
+    "next": "*"
   }
 }
